Included Http client and refactor Actor System Runner